syntax = "proto3";

package mailbox;

option go_package = "./mailbox";

// Mailbox Service - manages temporary mailboxes and email storage
service MailboxService {
  // Create a new temporary mailbox
  rpc CreateMailbox(CreateMailboxRequest) returns (MailboxResponse);
  
  // Get mailbox by ID
  rpc GetMailbox(GetMailboxRequest) returns (MailboxResponse);
  
  // List all mailboxes for a user
  rpc ListMailboxes(ListMailboxesRequest) returns (ListMailboxesResponse);
  
  // Delete a mailbox
  rpc DeleteMailbox(DeleteMailboxRequest) returns (DeleteMailboxResponse);
  
  // List emails in a mailbox
  rpc ListEmails(ListEmailsRequest) returns (ListEmailsResponse);
  
  // Get a specific email
  rpc GetEmail(GetEmailRequest) returns (EmailResponse);
  
  // Delete an email
  rpc DeleteEmail(DeleteEmailRequest) returns (DeleteEmailResponse);
  
  // Mark email as read
  rpc MarkEmailRead(MarkEmailReadRequest) returns (EmailResponse);
  
  // Store a new email (called by Mail Service)
  rpc StoreEmail(StoreEmailRequest) returns (StoreEmailResponse);
  
  // Extend mailbox expiry time
  rpc ExtendMailboxExpiry(ExtendExpiryRequest) returns (MailboxResponse);
  
  // Get mailbox by email address (for routing incoming mail)
  rpc GetMailboxByAddress(GetMailboxByAddressRequest) returns (MailboxResponse);
}

// Request/Response Messages

message CreateMailboxRequest {
  string user_id = 1;
  optional string custom_name = 2;  // Optional custom local part
  optional string domain = 3;       // Optional domain selection
  optional int32 ttl_minutes = 4;   // Time to live in minutes
}

message MailboxResponse {
  bool success = 1;
  string message = 2;
  Mailbox mailbox = 3;
}

message Mailbox {
  string id = 1;
  string user_id = 2;
  string email_address = 3;
  string domain = 4;
  int32 email_count = 5;
  int32 unread_count = 6;
  string expires_at = 7;
  string created_at = 8;
  bool is_active = 9;
}

message GetMailboxRequest {
  string mailbox_id = 1;
  string user_id = 2;
}

message GetMailboxByAddressRequest {
  string email_address = 1;
}

message ListMailboxesRequest {
  string user_id = 1;
  optional int32 limit = 2;
  optional int32 offset = 3;
  optional bool include_expired = 4;
}

message ListMailboxesResponse {
  bool success = 1;
  string message = 2;
  repeated Mailbox mailboxes = 3;
  int32 total = 4;
}

message DeleteMailboxRequest {
  string mailbox_id = 1;
  string user_id = 2;
}

message DeleteMailboxResponse {
  bool success = 1;
  string message = 2;
}

message ListEmailsRequest {
  string mailbox_id = 1;
  string user_id = 2;
  optional int32 limit = 3;
  optional int32 offset = 4;
}

message ListEmailsResponse {
  bool success = 1;
  string message = 2;
  repeated EmailSummary emails = 3;
  int32 total = 4;
}

message EmailSummary {
  string id = 1;
  string mailbox_id = 2;
  string from = 3;
  string subject = 4;
  string preview = 5;
  bool is_read = 6;
  bool has_attachments = 7;
  string received_at = 8;
}

message GetEmailRequest {
  string email_id = 1;
  string user_id = 2;
}

message EmailResponse {
  bool success = 1;
  string message = 2;
  EmailDetail email = 3;
}

message EmailDetail {
  string id = 1;
  string mailbox_id = 2;
  string from = 3;
  string to = 4;
  string subject = 5;
  string text_body = 6;
  string html_body = 7;
  repeated AttachmentInfo attachments = 8;
  bool is_read = 9;
  string received_at = 10;
}

message AttachmentInfo {
  string id = 1;
  string filename = 2;
  string content_type = 3;
  int64 size = 4;
}

message DeleteEmailRequest {
  string email_id = 1;
  string user_id = 2;
}

message DeleteEmailResponse {
  bool success = 1;
  string message = 2;
}

message MarkEmailReadRequest {
  string email_id = 1;
  string user_id = 2;
}

message StoreEmailRequest {
  string mailbox_id = 1;
  string from = 2;
  string to = 3;
  string subject = 4;
  string text_body = 5;
  string html_body = 6;
  repeated AttachmentData attachments = 7;
  string received_at = 8;
}

message AttachmentData {
  string filename = 1;
  string content_type = 2;
  bytes content = 3;
}

message StoreEmailResponse {
  bool success = 1;
  string message = 2;
  string email_id = 3;
}

message ExtendExpiryRequest {
  string mailbox_id = 1;
  string user_id = 2;
  int32 additional_minutes = 3;
}
